--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.6.3",
     "react-slick": "^0.30.3",
