Create forgot password and edit UI

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,5 @@ COOKIE_EXPIRE=7
 CLOUDINARY_CLOUD_NAME=dawufivy7
 CLOUDINARY_API_KEY=916812256419735
 CLOUDINARY_API_SECRET=RSsuU-6maD8sHwrnHIu8URvPIJs
+SMTP_MAIL=triwahyudi5321@gmail.com
+SMTP_PASSWORD=tglvzksnnnegphtq
