--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
     "react": "^19.1.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
